--- a/example/android/app/build.gradle
+++ b/example/android/app/build.gradle
@@ -33,7 +33,7 @@ android {
 
     defaultConfig {
         // TODO: Specify your own unique Application ID (https://developer.android.com/studio/build/application-id.html).
-        applicationId "com.swrve.swrve_plugin_example"
+        applicationId "com.swrve.flutter.swrve_plugin_example"
         minSdkVersion 16
         targetSdkVersion 29
         versionCode flutterVersionCode.toInteger()
